--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Meu Portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <header></header>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <p class="apresentacao__conteudo__topo">CÓDIGO E CRIATIVIDADE: PORTFÓLIO<br> DE UMA ESTUDANTE DE TECNOLOGIA</p>
+            <h1>Olá! Sou <strong class="titulo-destaque">Ane Katerinne,</strong></h1>
+            <p>Estudante entusiasta de Sistemas de Informação na FIAP, dedicada a explorar os intricados mundos da tecnologia e do desenvolvimento de software.</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://github.com/Akaterinne" target="_blank">Github</a>
+            </div>
+        </section>
+        <img src="imagens/IMG_0017.jpeg" alt="Foto da Ane Katerinnne">
+    </main>
+    <footer></footer>
+</body>
+</html>
 
